--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "@types/node": "^16.18.12",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
+    "date-fns": "^2.29.3",
+    "decimal.js": "^10.4.3",
     "formik": "^2.2.9",
-    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
