Build dApp, added helper to load tkn uris, clean ui

--- a/public/dapp.conf
+++ b/public/dapp.conf
@@ -1,7 +1,7 @@
 { 
-  "name": "MiVest", 
+  "name": "VESTR", 
   "icon": "favicon.ico", 
   "version": "1.0.0", 
-  "description": "Slow cash", 
+  "description": "Create and track a vesting contract", 
   "browser": "internal" 
 }
