--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "vesting",
+  "name": "VESTR",
   "version": "0.1.0",
   "private": true,
+  "homepage":".",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -28,7 +29,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "build:dapp": "npm run build && rm dapp/vesting_* && cd build && zip -r vesting_$npm_package_version.mds.zip . && mv vesting_$npm_package_version.mds.zip ../dapp/",
+    "build:dapp": "npm run build && rm dapp/vestr_* && cd build && zip -r vestr_$npm_package_version.mds.zip . && mv vestr_$npm_package_version.mds.zip ../dapp/",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
