--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "build:dapp": "npm run build && rm dapp/vestr_* && cd build && zip -r vestr_$npm_package_version.mds.zip . && mv vestr_$npm_package_version.mds.zip ../dapp/",
+    "package": "bash package.sh",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
