--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,5 +31,5 @@ jobs:
       - name: Artifact build files
         uses: actions/upload-artifact@v3
         with:
-          name: maximize-${{ steps.package-version.outputs.current-version}}.mds
-          path: maximize-${{ steps.package-version.outputs.current-version}}.mds.zip
+          name: vestr-${{ steps.package-version.outputs.current-version}}.mds
+          path: vestr-${{ steps.package-version.outputs.current-version}}.mds.zip
