Updated icons, description, build MVP

--- a/public/dapp.conf
+++ b/public/dapp.conf
@@ -1,7 +1,7 @@
 { 
   "name": "VESTR", 
   "icon": "favicon.ico", 
-  "version": "1.2.3", 
-  "description": "Create and track a vesting contract", 
+  "version": "2.0.0", 
+  "description": "Vestr enables you to create and collect vesting schedules for any token issued on the Minima blockchain.", 
   "browser": "internal" 
 }
