--- a/public/dapp.conf
+++ b/public/dapp.conf
@@ -2,6 +2,6 @@
   "name": "VESTR", 
   "icon": "favicon.ico", 
   "version": "2.1.0", 
-  "description": "Vestr enables you to create and collect vesting schedules for any token issued on the Minima blockchain.", 
+  "description": "Create & collect vesting schedules for any token on the Minima blockchain.", 
   "browser": "internal" 
 }
