--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
     "typescript": "^4.9.5",
+    "virtual-keyboard-offset": "^1.0.10",
     "web-vitals": "^2.1.4",
     "yup": "^1.0.2"
   },
