--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "VESTR",
-  "version": "1.0.0",
+  "name": "vestr",
+  "version": "1.1.0",
   "private": true,
   "homepage": ".",
   "dependencies": {
