--- a/public/dapp.conf
+++ b/public/dapp.conf
@@ -1,7 +1,7 @@
 { 
-  "name": "VESTR", 
+  "name": "Vestr", 
   "icon": "favicon.ico", 
-  "version": "1.0.0", 
+  "version": "1.1.0", 
   "description": "Create & collect vesting schedules for any token on the Minima blockchain.", 
   "browser": "internal" 
 }
