--- a/public/dapp.conf
+++ b/public/dapp.conf
@@ -1,7 +1,8 @@
 { 
   "name": "Vestr", 
   "icon": "favicon.ico", 
-  "version": "1.7.2", 
+  "version": "1.7.3", 
   "description": "Create & collect vesting schedules for any token on the Minima blockchain.", 
-  "browser": "internal" 
+  "browser": "internal",
+  "category": "Finance"
 }
