--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.7.4",
     "react-transition-group": "^4.4.5",
     "typescript": "^4.9.5",
     "virtual-keyboard-offset": "^1.0.10",
